--- a/RC_QC_Line/public/liff/view.html
+++ b/RC_QC_Line/public/liff/view.html
@@ -1249,9 +1249,7 @@
                             if (files.length > 0 && navigator.canShare({ files: files })) {
                                 // Share all files at once
                                 await navigator.share({
-                                    files: files,
-                                    title: `QC ${lotNumber}`,
-                                    text: `รูปภาพ QC ${lotNumber} จำนวน ${files.length} รูป`
+                                    files: files
                                 });
                                 
                                 showToast('✅ บันทึกรูปภาพเรียบร้อย');
@@ -1262,8 +1260,7 @@
                                 for (let i = 0; i < files.length; i++) {
                                     try {
                                         await navigator.share({
-                                            files: [files[i]],
-                                            title: `QC ${lotNumber} (${i + 1}/${files.length})`
+                                            files: [files[i]]
                                         });
                                         
                                         // Small delay between shares
